--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section>
           <div>
             <h2>Meus Jogos</h2>
-            <p>Os jogos que eu mais curto jogar!</p>
+            <p>Os jogos que eu mais curto!</p>
 
             <ul class="games-list">
               <li>
@@ -62,7 +62,7 @@
         <section>
           <div>
             <h2>Canais e streamers</h2>
-            <p>Lista de canais e transmissões que eu não perco!</p>
+            <p>Lista de canais e transmissões que eu gosto!</p>
 
             <ul class="channel-list">
               <li>
@@ -95,8 +95,8 @@
 
         <section>
           <div>
-            <h2>Minhas redes</h2>
-            <p>Se conecte comigo agora mesmo!</p>
+            <h2>Redes sociais</h2>
+            <p>Siga-me os bons!</p>
 
             <ul class="social-list">
               <li>
