--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <section>
           <div>
             <h2>Redes sociais</h2>
-            <p>Siga-me os bons!</p>
+            <p>Sigam-me os bons!</p>
 
             <ul class="social-list">
               <li>
